<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background2"
    tools:context=".ChefCook.Chef_Cook_Orders">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tabGravity="fill"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_new_orders_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_orders" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_prepared_orders_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepared_orders" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_completed_orders_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_orders" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_rejected_orders_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rejected_orders" />
        </com.google.android.material.tabs.TabLayout>

    <!-- RecyclerView for displaying orders -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_orders_chef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/activity_item_order_card" />
</LinearLayout>