<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Waiter.Waiter_Notifications">

        <!-- Toolbar with Tabs -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F2F2"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-16dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_sent_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sent_orders" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_prepared_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_preparation" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_ready_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_orders" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_rejected_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rejected_orders" />
            </com.google.android.material.tabs.TabLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
